--- a/css/style.css
+++ b/css/style.css
@@ -2,21 +2,21 @@
 }
 
 .grid_row {
-    height: 50px;
+    /*height: 50px;*/
     display: block;
     text-align: center;
 }
 
 .grid_col {
-    width: 50px;
+    width: 65px;
     /*display: inline-block;*/
 
-    padding: none;
+    padding: 0;
 }
 
 .tile {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
 
     background-color: rgba(145,131,149,0.3);
 
@@ -32,6 +32,7 @@
 
 .tile_bomb {
     background-color: rgba(28,28,36,0.6);
+    border: none;
 }
 .tile_revealed {
     background-color: white;
